--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~40.0.0",
     "expo-constants": "^9.3.5",
     "expo-image-picker": "~9.2.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "react": "16.13.1",
@@ -28,8 +29,8 @@
     "react-native-screens": "~2.15.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.1",
-    "expo-linear-gradient": "~8.4.0"
+    "save": "^2.4.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
